@@ -126,6 +126,7 @@ var_expr::~var_expr()
   if (theVarInfo)
   {
     assert(theVarKind == prolog_var);
+    assert(theVarInfo->getName() != NULL);
     theVarInfo->clearVar();
   }
 }
